Fix layout issue, fix report link

--- a/postcss/_module.form-elements.css
+++ b/postcss/_module.form-elements.css
@@ -7,7 +7,7 @@ input:-webkit-autofill { -webkit-text-fill-color: inherit; -webkit-box-shadow: 0
 
 textarea::placeholder { color: inherit; opacity: 1; }
 textarea.textarea__modal { margin: 1% 5%; height: 55%; width: 90% }
-.btn--group__modal { margin: 0% 0% 0% auto; }
+.btn--group__modal { margin-right: 3em; float: right;}
 .modal--header { padding: 1% 2%; }
 .modal--header ul { margin: 0% 5%; }
 
